grammar/compiler/src/generated/FearlessParser.java
// Generated from /Users/nick/Programming/PhD/fearless/grammar/antlrGrammars/Fearless.g4 by ANTLR 4.12.0
package generated;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class FearlessParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		Mut=1, Lent=2, Read=3, ReadOnly=4, Iso=5, RecMdf=6, Mdf=7, Imm=8, Eq=9, 
		Alias=10, As=11, OC=12, CC=13, OS=14, CS=15, OR=16, CR=17, Comma=18, Colon=19, 
		Arrow=20, Underscore=21, X=22, SelfX=23, MName=24, BlockComment=25, LineComment=26, 
		SysInM=27, FullCN=28, Whitespace=29, Pack=30;
	public static final int
		RULE_fullCN = 0, RULE_x = 1, RULE_m = 2, RULE_mdf = 3, RULE_roundE = 4, 
		RULE_genDecl = 5, RULE_mGen = 6, RULE_lambda = 7, RULE_block = 8, RULE_bblock = 9, 
		RULE_t = 10, RULE_singleM = 11, RULE_meth = 12, RULE_sig = 13, RULE_gamma = 14, 
		RULE_topDec = 15, RULE_alias = 16, RULE_atomE = 17, RULE_postE = 18, RULE_pOp = 19, 
		RULE_e = 20, RULE_callOp = 21, RULE_nudeE = 22, RULE_nudeX = 23, RULE_nudeM = 24, 
		RULE_nudeFullCN = 25, RULE_nudeT = 26, RULE_nudeProgram = 27;
	private static String[] makeRuleNames() {
		return new String[] {
			"fullCN", "x", "m", "mdf", "roundE", "genDecl", "mGen", "lambda", "block", 
			"bblock", "t", "singleM", "meth", "sig", "gamma", "topDec", "alias", 
			"atomE", "postE", "pOp", "e", "callOp", "nudeE", "nudeX", "nudeM", "nudeFullCN", 
			"nudeT", "nudeProgram"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'mut'", "'lent'", "'read'", "'readOnly'", "'iso'", "'recMdf'", 
			"'mdf'", "'imm'", "'='", "'alias'", "'as'", "'{'", "'}'", "'['", "']'", 
			"'('", "')'", "','", "':'", "'->'", "'_'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "Mut", "Lent", "Read", "ReadOnly", "Iso", "RecMdf", "Mdf", "Imm", 
			"Eq", "Alias", "As", "OC", "CC", "OS", "CS", "OR", "CR", "Comma", "Colon", 
			"Arrow", "Underscore", "X", "SelfX", "MName", "BlockComment", "LineComment", 
			"SysInM", "FullCN", "Whitespace", "Pack"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Fearless.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FearlessParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FullCNContext extends ParserRuleContext {
		public TerminalNode FullCN() { return getToken(FearlessParser.FullCN, 0); }
		public FullCNContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fullCN; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FearlessListener ) ((FearlessListener)listener).enterFullCN(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FearlessListener ) ((FearlessListener)listener).exitFullCN(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FearlessVisitor ) return ((FearlessVisitor<? extends T>)visitor).visitFullCN(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FullCNContext fullCN() throws RecognitionException {
		FullCNContext _localctx = new FullCNContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_fullCN);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			match(FullCN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class XContext extends ParserRuleContext {
		public TerminalNode X() { return getToken(FearlessParser.X, 0); }
		public TerminalNode Underscore() { return getToken(FearlessParser.Underscore, 0); }
		public XContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_x; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FearlessListener ) ((FearlessListener)listener).enterX(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FearlessListener ) ((FearlessListener)listener).exitX(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FearlessVisitor ) return ((FearlessVisitor<? extends T>)visitor).visitX(this);
			else return visitor.visitChildren(this);
		}
	}

	public final XContext x() throws RecognitionException {
		XContext _localctx = new XContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_x);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			_la = _input.LA(1);
			if ( !(_la==Underscore || _la==X) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MContext extends ParserRuleContext {
		public TerminalNode SysInM() { return getToken(FearlessParser.SysInM, 0); }
		public TerminalNode MName() { return getToken(FearlessParser.MName, 0); }
		public MContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_m; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FearlessListener ) ((FearlessListener)listener).enterM(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FearlessListener ) ((FearlessListener)listener).exitM(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FearlessVisitor ) return ((FearlessVisitor<? extends T>)visitor).visitM(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MContext m() throws RecognitionException {
		MContext _localctx = new MContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_m);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			_la = _input.LA(1);
			if ( !(_la==MName || _la==SysInM) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MdfContext extends ParserRuleContext {
		public TerminalNode Mut() { return getToken(FearlessParser.Mut, 0); }
		public TerminalNode ReadOnly() { return getToken(FearlessParser.ReadOnly, 0); }
		public TerminalNode Lent() { return getToken(FearlessParser.Lent, 0); }
		public TerminalNode Read() { return getToken(FearlessParser.Read, 0); }
		public TerminalNode Iso() { return getToken(FearlessParser.Iso, 0); }
		public TerminalNode RecMdf() { return getToken(FearlessParser.RecMdf, 0); }
		public TerminalNode Imm() { return getToken(FearlessParser.Imm, 0); }
		public MdfContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mdf; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FearlessListener ) ((FearlessListener)listener).enterMdf(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FearlessListener ) ((FearlessListener)listener).exitMdf(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FearlessVisitor ) return ((FearlessVisitor<? extends T>)visitor).visitMdf(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MdfContext mdf() throws RecognitionException {
		MdfContext _localctx = new MdfContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_mdf);
		try {
			setState(70);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(62);
				match(Mut);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(63);
				match(ReadOnly);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(64);
				match(Lent);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(65);
				match(Read);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(66);
				match(Iso);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(67);
				match(RecMdf);
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(68);
				match(Imm);
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RoundEContext extends ParserRuleContext {
		public TerminalNode OR() { return getToken(FearlessParser.OR, 0); }
		public EContext e() {
			return getRuleContext(EContext.class,0);
		}
		public TerminalNode CR() { return getToken(FearlessParser.CR, 0); }
		public RoundEContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_roundE; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FearlessListener ) ((FearlessListener)listener).enterRoundE(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FearlessListener ) ((FearlessListener)listener).exitRoundE(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FearlessVisitor ) return ((FearlessVisitor<? extends T>)visitor).visitRoundE(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RoundEContext roundE() throws RecognitionException {
		RoundEContext _localctx = new RoundEContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_roundE);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(OR);
			setState(73);
			e();
			setState(74);
			match(CR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GenDeclContext extends ParserRuleContext {
		public TContext t() {
			return getRuleContext(TContext.class,0);
		}
		public TerminalNode Colon() { return getToken(FearlessParser.Colon, 0); }
		public List<MdfContext> mdf() {
			return getRuleContexts(MdfContext.class);
		}
		public MdfContext mdf(int i) {
			return getRuleContext(MdfContext.class,i);
		}
		public List<TerminalNode> Comma() { return getTokens(FearlessParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(FearlessParser.Comma, i);
		}
		public GenDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_genDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FearlessListener ) ((FearlessListener)listener).enterGenDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FearlessListener ) ((FearlessListener)listener).exitGenDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FearlessVisitor ) return ((FearlessVisitor<? extends T>)visitor).visitGenDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GenDeclContext genDecl() throws RecognitionException {
		GenDeclContext _localctx = new GenDeclContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_genDecl);
		try {
			int _alt;
			setState(87);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(76);
				t();
				setState(77);
				match(Colon);
				{
				setState(78);
				mdf();
				setState(83);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(79);
						match(Comma);
						setState(80);
						mdf();
						}
						} 
					}
					setState(85);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
				}
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(86);
				t();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MGenContext extends ParserRuleContext {
		public TerminalNode OS() { return getToken(FearlessParser.OS, 0); }
		public TerminalNode CS() { return getToken(FearlessParser.CS, 0); }
		public List<GenDeclContext> genDecl() {
			return getRuleContexts(GenDeclContext.class);
		}
		public GenDeclContext genDecl(int i) {
			return getRuleContext(GenDeclContext.class,i);
		}
		public List<TerminalNode> Comma() { return getTokens(FearlessParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(FearlessParser.Comma, i);
		}
		public MGenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mGen; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FearlessListener ) ((FearlessListener)listener).enterMGen(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FearlessListener ) ((FearlessListener)listener).exitMGen(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FearlessVisitor ) return ((FearlessVisitor<? extends T>)visitor).visitMGen(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MGenContext mGen() throws RecognitionException {
		MGenContext _localctx = new MGenContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_mGen);
		int _la;
		try {
			setState(102);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EOF:
			case Mut:
			case Lent:
			case Read:
			case ReadOnly:
			case Iso:
			case RecMdf:
			case Imm:
			case As:
			case OC:
			case CC:
			case CS:
			case OR:
			case CR:
			case Comma:
			case Colon:
			case Arrow:
			case Underscore:
			case X:
			case MName:
			case SysInM:
			case FullCN:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case OS:
				enterOuterAlt(_localctx, 2);
				{
				setState(90);
				match(OS);
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 268435838L) != 0)) {
					{
					setState(91);
					genDecl();
					setState(96);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==Comma) {
						{
						{
						setState(92);
						match(Comma);
						setState(93);
						genDecl();
						}
						}
						setState(98);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}

				setState(101);
				match(CS);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LambdaContext extends ParserRuleContext {
		public MdfContext mdf() {
			return getRuleContext(MdfContext.class,0);
		}
		public TopDecContext topDec() {
			return getRuleContext(TopDecContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public LambdaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lambda; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FearlessListener ) ((FearlessListener)listener).enterLambda(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FearlessListener ) ((FearlessListener)listener).exitLambda(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FearlessVisitor ) return ((FearlessVisitor<? extends T>)visitor).visitLambda(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LambdaContext lambda() throws RecognitionException {
		LambdaContext _localctx = new LambdaContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_lambda);
		try {
			setState(110);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(104);
				mdf();
				setState(105);
				topDec();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(107);
				mdf();
				setState(108);
				block();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlockContext extends ParserRuleContext {
		public TerminalNode OC() { return getToken(FearlessParser.OC, 0); }
		public BblockContext bblock() {
			return getRuleContext(BblockContext.class,0);
		}
		public TerminalNode CC() { return getToken(FearlessParser.CC, 0); }
		public List<TContext> t() {
			return getRuleContexts(TContext.class);
		}
		public TContext t(int i) {
			return getRuleContext(TContext.class,i);
		}
		public List<TerminalNode> Comma() { return getTokens(FearlessParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(FearlessParser.Comma, i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FearlessListener ) ((FearlessListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FearlessListener ) ((FearlessListener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FearlessVisitor ) return ((FearlessVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_block);
		int _la;
		try {
			setState(127);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(120);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 268435838L) != 0)) {
					{
					setState(112);
					t();
					setState(117);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==Comma) {
						{
						{
						setState(113);
						match(Comma);
						setState(114);
						t();
						}
						}
						setState(119);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}

				setState(122);
				match(OC);
				setState(123);
				bblock();
				setState(124);
				match(CC);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(126);
				t();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BblockContext extends ParserRuleContext {
		public SingleMContext singleM() {
			return getRuleContext(SingleMContext.class,0);
		}
		public TerminalNode SelfX() { return getToken(FearlessParser.SelfX, 0); }
		public List<MethContext> meth() {
			return getRuleContexts(MethContext.class);
		}
		public MethContext meth(int i) {
			return getRuleContext(MethContext.class,i);
		}
		public List<TerminalNode> Comma() { return getTokens(FearlessParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(FearlessParser.Comma, i);
		}
		public BblockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bblock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FearlessListener ) ((FearlessListener)listener).enterBblock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FearlessListener ) ((FearlessListener)listener).exitBblock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FearlessVisitor ) return ((FearlessVisitor<? extends T>)visitor).visitBblock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BblockContext bblock() throws RecognitionException {
		BblockContext _localctx = new BblockContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_bblock);
		int _la;
		try {
			int _alt;
			setState(150);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(131);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SelfX) {
					{
					setState(130);
					match(SelfX);
					}
				}

				setState(133);
				singleM();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(135);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SelfX) {
					{
					setState(134);
					match(SelfX);
					}
				}

				setState(145);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 150995326L) != 0)) {
					{
					setState(137);
					meth();
					setState(142);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
					while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
						if ( _alt==1 ) {
							{
							{
							setState(138);
							match(Comma);
							setState(139);
							meth();
							}
							} 
						}
						setState(144);
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
					}
					}
				}

				setState(148);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==Comma) {
					{
					setState(147);
					match(Comma);
					}
				}

				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TContext extends ParserRuleContext {
		public MdfContext mdf() {
			return getRuleContext(MdfContext.class,0);
		}
		public FullCNContext fullCN() {
			return getRuleContext(FullCNContext.class,0);
		}
		public MGenContext mGen() {
			return getRuleContext(MGenContext.class,0);
		}
		public TContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_t; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FearlessListener ) ((FearlessListener)listener).enterT(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FearlessListener ) ((FearlessListener)listener).exitT(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FearlessVisitor ) return ((FearlessVisitor<? extends T>)visitor).visitT(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TContext t() throws RecognitionException {
		TContext _localctx = new TContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_t);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			mdf();
			setState(153);
			fullCN();
			setState(154);
			mGen();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
